Update libpng source URL
The libpng project moves old releases into a `older-releases`
subdirectory.  This usually indicates that the release shouldn't be used
due to security vulnerabilities.  Also sourceforge seems to force HTTPS
downloads only, at least for the libpng project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ endif()
 
 ExternalProject_Add(libpng
     DEPENDS zlib
-    URL http://sourceforge.net/projects/libpng/files/libpng16/1.6.17/libpng-1.6.17.tar.gz/download
+    URL https://sourceforge.net/projects/libpng/files/libpng16/older-releases/1.6.17/libpng-1.6.17.tar.gz/download
     URL_MD5 134282f1752dcf4cd81a37b8ff421cef
     DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
     CMAKE_ARGS
